version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/GeometryBasedAdaptivity.rst.txt
.. vale off



:class:`GeometryBasedAdaptivity`
================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.GeometryBasedAdaptivity

   Bases: :py:obj:`object`


   
   Defines a GeometryBasedAdaptivity.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: GeometryBasedAdaptivity

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~BufferElements`
            - Gets or sets the BufferElements.
          * - :py:attr:`~BufferLayers`
            - Gets or sets the BufferLayers.
          * - :py:attr:`~CheckAt`
            - Gets or sets the CheckAt.
          * - :py:attr:`~CheckAtValue`
            - Gets or sets the CheckAtValue.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~Criterion`
            - Gets or sets the Criterion.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~EndTime`
            - Gets or sets the EndTime.
          * - :py:attr:`~EnergyCoefficient`
            - Gets or sets the EnergyCoefficient.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~HexDomCheckAt`
            - Gets or sets the HexDomCheckAt.
          * - :py:attr:`~HexDomCheckAtValue`
            - Gets or sets the HexDomCheckAtValue.
          * - :py:attr:`~HexDomEndTime`
            - Gets or sets the HexDomEndTime.
          * - :py:attr:`~HexDomStartTime`
            - Gets or sets the HexDomStartTime.
          * - :py:attr:`~HexDomTimeRange`
            - Gets or sets the HexDomTimeRange.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~JacobianRatioValue`
            - Gets or sets the JacobianRatioValue.
          * - :py:attr:`~LengthX`
            - Gets or sets the LengthX.
          * - :py:attr:`~LengthY`
            - Gets or sets the LengthY.
          * - :py:attr:`~LengthZ`
            - Gets or sets the LengthZ.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~MaximumCornerAngle`
            - Gets or sets the MaximumCornerAngle.
          * - :py:attr:`~Option`
            - Gets or sets the Option.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RemeshLayerEnd`
            - Gets or sets the RemeshLayerEnd.
          * - :py:attr:`~RemeshLayerFrequency`
            - Gets or sets the RemeshLayerFrequency.
          * - :py:attr:`~RemeshLayerStart`
            - Gets or sets the RemeshLayerStart.
          * - :py:attr:`~SkewnessValue`
            - Gets or sets the SkewnessValue.
          * - :py:attr:`~StartTime`
            - Gets or sets the StartTime.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TimeRange`
            - Gets or sets the TimeRange.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: BufferElements
   :type: Optional[int]

   
   Gets or sets the BufferElements.
















   ..
       !! processed by numpydoc !!

.. py:property:: BufferLayers
   :type: Optional[int]

   
   Gets or sets the BufferLayers.
















   ..
       !! processed by numpydoc !!

.. py:property:: CheckAt
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityUpdateType]

   
   Gets or sets the CheckAt.
















   ..
       !! processed by numpydoc !!

.. py:property:: CheckAtValue
   :type: Optional[int]

   
   Gets or sets the CheckAtValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: Criterion
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityCriterionType]

   
   Gets or sets the Criterion.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: EndTime
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the EndTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnergyCoefficient
   :type: Optional[float]

   
   Gets or sets the EnergyCoefficient.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexDomCheckAt
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityUpdateType]

   
   Gets or sets the HexDomCheckAt.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexDomCheckAtValue
   :type: Optional[int]

   
   Gets or sets the HexDomCheckAtValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexDomEndTime
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the HexDomEndTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexDomStartTime
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the HexDomStartTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexDomTimeRange
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityTimeRange]

   
   Gets or sets the HexDomTimeRange.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSNonlinearAdaptivityAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: JacobianRatioValue
   :type: Optional[float]

   
   Gets or sets the JacobianRatioValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthX
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the LengthX.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthY
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the LengthY.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthZ
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the LengthZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumCornerAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the MaximumCornerAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: Option
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityOptionType]

   
   Gets or sets the Option.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemeshLayerEnd
   :type: Optional[int]

   
   Gets or sets the RemeshLayerEnd.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemeshLayerFrequency
   :type: Optional[int]

   
   Gets or sets the RemeshLayerFrequency.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemeshLayerStart
   :type: Optional[int]

   
   Gets or sets the RemeshLayerStart.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkewnessValue
   :type: Optional[float]

   
   Gets or sets the SkewnessValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: StartTime
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the StartTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeRange
   :type: Optional[Ansys.Mechanical.DataModel.Enums.NonlinearAdaptivityTimeRange]

   
   Gets or sets the TimeRange.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on